adapt to dbc and socketcan

--- a/raptor_dbw_can/package.xml
+++ b/raptor_dbw_can/package.xml
@@ -22,6 +22,8 @@
   <depend>raptor_pdu</depend>
   <depend>raptor_pdu_msgs</depend>
 
+  <exec_depend>ros2_socketcan</exec_depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
