--- a/raptor_dbw_joystick/package.xml
+++ b/raptor_dbw_joystick/package.xml
@@ -17,6 +17,8 @@
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
 
+  <exec_depend>joy_linux</exec_depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
